added news and sso
took me many hours, but that's worth it